# TO-Chinese-School-2020

./: .gitignore  LICENSE  README.md
andrew-registration/backend/: package-lock.json  package.json
andrew-registration/backend/src/: queries.js  server.js
andrew-registration/frontend/: README.md  package-lock.json  package.json
andrew-registration/frontend/src/: App.css  App.js
cloud-ops/: new-registration-app-deployment-2021q4.md  setup-new-server-202104.md  setup-new-server.md
cloud-ops/deployment/: deployment-steps.md  package-tocs-back-end.sh  package-tocs-front-end-preview.sh  start-tocs-back-end-preview.sh  update-tocs-back-end-preview.sh  update-tocs-front-end-preview.sh
tocs/: README.md
tocs/back-end/: .eslintrc.json  .gitignore  .prettierignore  README.md  cli  jest.config.mjs  package-lock.json  package.json
tocs/front-end/: .prettierignore  README.md  package-lock.json  package.json
tools/form_submission/: .gitignore
tools/form_submission/check_missing_form/: LICENSE  README.md  requirements-dev.txt  setup.cfg
tools/form_submission/check_missing_form/src/check_missing_form/: __init__.py  check_missing_form.py
tools/form_submission/check_missing_form/tests/data/: sample_form_submitted_students.csv  sample_missing_form_students.csv  sample_registered_students.csv
tools/form_submission/check_missing_form/tests/func/: test_check_submission.py
tools/form_submission/check_missing_form/tests/unit/: test_input.py  test_output.py  test_student.py
tools/form_submission/check_missing_form/tests/unit/data/: sample_registered_students.csv
(+338 files in other folders)
