[metadata]
name = tocs-tools-check-missing-form
version = 0.0.1
author = Chiaming Hsu
author_email = engineering1@to-cs.org
description = A utility script to check which student does not have the required form submitted
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/camyhsu/TO-Chinese-School-2020/tree/master/tools/form_submission/check_missing_form
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src